[package]
name = "sparklane"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
actix = "0.13.5"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
foundationdb = { version = "0.9.2", features = ["fdb-6_3"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.0.0"
# async-stripe = { version = "0.41.0", features = ["runtime-blocking"] }
